test_feedback_for_MA_instance_with_mistakes_from_MDS(), Part 2