@@ -1,6 +1,6 @@
 package modelingassistant.restapi;
 
-import java.util.Collections;
+import java.util.Map;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration;
@@ -11,9 +11,14 @@ public class ModelingAssistantRestApi {
   /** The default port used by the application. */
   public static final int PORT = 8539;
 
+  /** The maximum HTTP header size used by the application. */
+  public static final int MAX_HEADER_SIZE = 1_048_576; // 2^20
+
   public static void main(String[] args) {
     var app = new SpringApplication(ModelingAssistantRestApi.class);
-    app.setDefaultProperties(Collections.singletonMap("server.port", PORT));
+    app.setDefaultProperties(Map.of(
+        "server.port", PORT,
+        "server.max-http-header-size", MAX_HEADER_SIZE));
     app.run(args);
   }
 
